# glfwgladstarter

./: CMakeLists.txt
.cache/clangd/index/: context.c.1DAB8BD6801B4E38.idx  egl_context.c.029E1802E5099547.idx  glad.c.792EA66A2B45465A.idx  glad.h.263510873023B9A4.idx  glfw3.h.7B9514667C22E5A7.idx  glx_context.c.0FC5666E4EEEFFD7.idx  init.c.DBACD906F8CF89A9.idx  input.c.AAD1DBFF8FD22848.idx  internal.h.B3EFA71484CE79EA.idx  khrplatform.h.FA59150D2243FBAA.idx  linux_joystick.c.11FCC4A01CCACFF7.idx  linux_joystick.h.DCAB6CFFF25DDD00.idx  main.cpp.06F07EF0255A6600.idx  mappings.h.EDBD2E08A3451287.idx  monitor.c.EAFD88625131D068.idx  null_init.c.9F1F5B6EB5AEB944.idx  null_joystick.c.2E2A4ABEF3A3DDD3.idx  null_joystick.h.18C9ACFBE3F20D9D.idx  null_monitor.c.05C11F0840717F53.idx  null_platform.h.9C71694C3D079B11.idx  null_window.c.1A537186837961C5.idx  osmesa_context.c.EA2F8709D34DDC6E.idx  platform.c.B11E5EB01303C201.idx  platform.h.FBAE55529600A152.idx  posix_module.c.8989DFF113492C54.idx  posix_poll.c.12B61837D4B9FC53.idx  posix_poll.h.93788129193C126A.idx  posix_thread.c.370B5BCD52648D51.idx  posix_thread.h.6BA1B3B090DD047D.idx  posix_time.c.18F78743CAD9F966.idx  posix_time.h.0A9367CBD9BB9440.idx  vulkan.c.07D621B262829120.idx  window.c.7278B4EFCC01D288.idx  x11_init.c.1F60CFA180C0F53C.idx  x11_monitor.c.D7605CE8AC422DFC.idx  x11_platform.h.5392DD50FEAECA99.idx  x11_window.c.31100F1A092A8E93.idx  xkb_unicode.c.0D25181C9BA15B06.idx  xkb_unicode.h.404704FC5CC73775.idx
src/: main.cpp
